--- a/dsconf/newTheme/scss/home.scss
+++ b/dsconf/newTheme/scss/home.scss
@@ -140,7 +140,7 @@
   flex-wrap: wrap;
 
   &__item{
-    width: 32%;
+    width: 30%;
     position: relative;
 
     &:before{
@@ -187,7 +187,7 @@
   }
 
   &__author-bio{
-    padding-left: 1rem;
+    padding-left: 1.5rem;
 
     .name{
       font-size: 2rem;
